--- a/src/styles/assets/scss/_global-styles.scss
+++ b/src/styles/assets/scss/_global-styles.scss
@@ -134,8 +134,8 @@ p {
 }
 .schedule-date-timing{
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 0%;
+  left: 0%;
   z-index: 999999;
   height: auto;
   background-color: $gray-300;
