--- a/src/styles/assets/scss/_global-styles.scss
+++ b/src/styles/assets/scss/_global-styles.scss
@@ -1,3 +1,4 @@
+
 body,
 html {
   font-size: 16px;
@@ -24,7 +25,8 @@ p {
   color: $gray-100;
 }
 .btn:focus {
- box-shadow: none!important;
+ -webkit-box-shadow: none!important;
+         box-shadow: none!important;
 }
 .icon-wrapper{
   position: relative;
@@ -58,7 +60,9 @@ p {
   position: absolute;
   top: -30px;
   left: 50%;
-  transform: translate(-50%, 0%);
+  -webkit-transform: translate(-50%, 0%);
+      -ms-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
   padding: 30px;
 }
 .icon-35{
@@ -78,7 +82,8 @@ p {
   .img-wrapper{
     width: 100%;
     height: 107px;
-    object-fit: contain;
+    -o-object-fit: contain;
+       object-fit: contain;
     img{
       @include img-100(100%, 100%)
     }
@@ -100,8 +105,33 @@ p {
     border-bottom-left-radius: 6px;
     color: $sage;
     &:focus{
-      box-shadow: none;
+      -webkit-box-shadow: none;
+              box-shadow: none;
     }
+     &::-webkit-input-placeholder{
+       color: $sage;
+      opacity: 0.6;
+       padding-left: 10px;
+       font-family: "Europa-Light";
+     }
+     &::-moz-placeholder{
+       color: $sage;
+      opacity: 0.6;
+       padding-left: 10px;
+       font-family: "Europa-Light";
+     }
+     &:-ms-input-placeholder{
+       color: $sage;
+      opacity: 0.6;
+       padding-left: 10px;
+       font-family: "Europa-Light";
+     }
+     &::-ms-input-placeholder{
+       color: $sage;
+      opacity: 0.6;
+       padding-left: 10px;
+       font-family: "Europa-Light";
+     }
      &::placeholder{
        color: $sage;
       opacity: 0.6;
@@ -121,7 +151,8 @@ p {
 }
 
 .schedule{
-  height: 100vh;
+  height: 100vh; 
+  height: calc(var(--vh, 1vh) * 100);
   .schedule-form-btn{
     width: 291px;
     height: 50px;
@@ -129,7 +160,9 @@ p {
     border: 1px solid $sage;
     bottom: 4%;
     left: 50%;
-    transform: translate(-50%, 0px);
+    -webkit-transform: translate(-50%, 0px);
+        -ms-transform: translate(-50%, 0px);
+            transform: translate(-50%, 0px);
   }
 }
 .schedule-date-timing{
@@ -168,4 +201,3 @@ p {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
-
