--- a/src/styles/assets/scss/_global-styles.scss
+++ b/src/styles/assets/scss/_global-styles.scss
@@ -156,7 +156,7 @@ p {
   .schedule-form-btn{
     width: 291px;
     height: 50px;
-    position: fixed;
+    position: absolute;
     border: 1px solid $sage;
     bottom: 4%;
     left: 50%;
